--- a/style.css
+++ b/style.css
@@ -10,17 +10,19 @@
   font-weight: 400;
 }
 
-:root{
+:root {
   --font-primary: Roboto, sans-serif;
   
   --color-Red: hsl(4, 100%, 67%);
   --color-Blue-800: hsl(234, 29%, 20%);
   --color-Blue-700: hsl(235, 18%, 26%);
-  --color-Grey: hsl(0, 0%,58%);
+  --color-Grey: hsl(0, 0%, 58%);
   --color-White: hsl(0, 0%, 100%);
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -29,4 +31,80 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: var(--font-primary);
+  color: var(--color-Blue-700);
+  font-weight: 500;
+}
+
+.article {
+  max-width: 700px;
+  width: 100%;
+}
+
+.article__img {
+  width: 100%;
+  height: 100%;
+}
+
+.article__content {
+  padding: 0 1.9rem 2rem;
+}
+
+.article__title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--color-Blue-800);
+}
+
+.container__list ul {
+  padding: 0;
+}
+
+.container__list ul li {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  height: 3.5rem;
+}
+
+.container__list ul li img {
+  
+}
+
+.article__footer {
+  margin-top: 2rem;
+}
+
+.label__email {
+  display: block;
+  font-weight: 700;
+  font-size: 0.8rem;
+  margin-bottom: 0.7rem;
+}
+
+.input__email {
+  width: 100%;
+  padding: 1.1rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--color-Grey);
+  margin-bottom: 1.5rem;
+}
+
+.form__button {
+  width: 100%;
+  height: 3.2rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--color-Blue-700);
+  color: var(--color-White);
+  font-weight: 700;
+}
+
+
+
+
+
+
+.container__suscribe {
+  display: none;
 }
